--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,19 +28,23 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  intl: ^0.18.0
   bloc: ^9.0.0
   cupertino_icons: ^1.0.8
   flutter:
     sdk: flutter
+  flutter_bloc: ^9.0.0
+  flutter_staggered_grid_view: ^0.7.0
+  font_awesome_flutter: ^10.8.0
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   meta: ^1.15.0
 
 dev_dependencies:
+  build_runner: ^2.4.14
   flutter_lints: ^5.0.0
   flutter_test:
     sdk: flutter
-  build_runner: ^2.4.14
   hive_generator: ^2.0.1
 
 # For information on the generic Dart part of this file, see the
